--- a/ImageProcess/ImageRotate/.vscode/settings.json
+++ b/ImageProcess/ImageRotate/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "random": "cpp"
+        "random": "cpp",
+        "cmath": "cpp"
     }
+	"C_Cpp.clang_format_fallbackStyle": "WebKit"
 }
